# LightStrategy

./: README.md  architecture.md
Game/: CMakeLists.txt  main.cpp
Game/composite/: Squad.cpp  Squad.h
Game/configs/: config.h
Game/configs/english_army/: config_archer_eng.h  config_artillery_eng.h  config_swordsman_eng.h
Game/configs/french_army/: config_archer_fr.h  config_artillery_fr.h  config_swordsman_fr.h
Game/factories/: CMakeLists.txt  EnglandFactory.cpp  EnglandFactory.h  FranceFactory.cpp  FranceFactory.h  UnitFactory.cpp  UnitFactory.h
Game/states/: DefenseState.cpp  DefenseState.h  FightState.cpp  FightState.h  State.h
Game/units/: Archer.cpp  Archer.h  Artillery.h  CMakeLists.txt  EnglishArcher.cpp  EnglishArcher.h  EnglishArtillery.cpp  EnglishArtillery.h  EnglishSwordsman.cpp  EnglishSwordsman.h  FrenchArcher.cpp  FrenchArcher.h  FrenchArtillery.cpp  FrenchArtillery.h  FrenchSwordsman.cpp  FrenchSwordsman.h  Swordsman.cpp  Swordsman.h  Unit.h
